--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     </tr>
     <tr>
       <td>Japão</td>
-      <td><img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Tokyo_Montage_2015.jpg" width="120"></td>
+      <td><img src="Cultura-Japonesa.jpg" width="120"></td>
     </tr>
     <tr>
       <td>Itália</td>
-      <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Colosseo_2020.jpg/320px-Colosseo_2020.jpg" width="120"></td>
+      <td><img src="turismo-na-Itália-min.jpg" width="120"></td>
     </tr>
     <tr>
       <td>Canadá</td>
-      <td><img src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Parliament_Ottawa.jpg" width="120"></td>
+      <td><img src="ca_van_skyline_water_trees.jpg" width="120"></td>
     </tr>
   </table>
 
