--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li>Editar vídeos</li>
   </ul>
 
-  <img src="https://placekitten.com/300/200" alt="Hobby favorito - Escrever" id="hobby-img">
+  <img src="IMG_20241219_231354 (1).jpg" alt="Hobby favorito - Escrever" id="hobby-img">
 
   <h2>Países que quero visitar</h2>
   <table>
