--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li>Editar vídeos</li>
   </ul>
 
-  <img src="IMG_20241219_231354 (1).jpg" alt="Hobby favorito - Escrever" id="hobby-img">
+  <img src="img/IMG_20241219_231354 (1).jpg" alt="Hobby favorito - Escrever" id="hobby-img">
 
   <h2>Países que quero visitar</h2>
   <table>
@@ -30,15 +30,15 @@
     </tr>
     <tr>
       <td>Japão</td>
-      <td><img src="Cultura-Japonesa.jpg" width="120"></td>
+      <td><img src="img/Cultura-Japonesa.jpg" width="120"></td>
     </tr>
     <tr>
       <td>Itália</td>
-      <td><img src="turismo-na-Itália-min.jpg" width="120"></td>
+      <td><img src="img/turismo-na-Itália-min.jpg" width="120"></td>
     </tr>
     <tr>
       <td>Canadá</td>
-      <td><img src="ca_van_skyline_water_trees.jpg" width="120"></td>
+      <td><img src="img/ca_van_skyline_water_trees.jpg" width="120"></td>
     </tr>
   </table>
 
