--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <h1>Thailiny Mayra</h1>
 
   <p>
-    Meu nome é Thailiny, tenho 28 anos, sou de Petrolina-PE, mãe de três filhos e apaixonada por tecnologia, leitura e criação de conteúdos. Estou cursando Análise e Desenvolvimento de Sistemas.
+    Meu nome é Thailiny, tenho 28 anos, sou de Petrolina-PE, mãe de três filhos, cristã e apaixonada por tecnologia, livros, comidas regionais e chocolate caseiro . Estou cursando Análise e Desenvolvimento de Sistemas.
   </p>
 
   <ul>
     <li>Estudar programação</li>
     <li>Escrever histórias</li>
-    <li>Editar vídeos</li>
+    <li>comidas regionais</li>
   </ul>
 
   <img src="img/IMG_20241219_231354 (1).jpg" alt="Hobby favorito - Escrever" id="hobby-img">
