--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </tr>
     <tr>
       <td>Itália</td>
-      <td><img src="img/turismo-na-italia-min.jpg" width="120"></td>
+      <td><img src="img/i.jpg" width="120"></td>
     </tr>
     <tr>
       <td>Canadá</td>
